[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://images/background.png" type="Texture" id=3]
[ext_resource path="res://music/menu.wav" type="AudioStream" id=4]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=5]
[ext_resource path="res://images/ui/audioOn.png" type="Texture" id=6]
[ext_resource path="res://images/ui/audioOff.png" type="Texture" id=7]
[ext_resource path="res://images/ui/musicOff.png" type="Texture" id=8]
[ext_resource path="res://images/ui/musicOn.png" type="Texture" id=9]
[ext_resource path="res://images/ui/larger.png" type="Texture" id=10]
[ext_resource path="res://images/ui/smaller.png" type="Texture" id=11]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -2.0
autoplay = true
bus = "Music"

[node name="Background" type="Node" parent="."]

[node name="Background" type="Sprite" parent="Background"]
position = Vector2( -96, -192 )
z_index = -1
texture = ExtResource( 3 )
centered = false

[node name="Top" type="TileMap" parent="Background"]
z_index = -1
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 6, 2, 1, 7, 2, 1, 8, 2, 1, 9, 2, 1, 10, 2, 1, 11, 2, 1, 12, 2, 1, 13, 2, 1, 14, 2, 1, 15, 2, 1, 16, 2, 1, 17, 2, 2, 65536, 2, 65536, 65537, 2, 65537, 65538, 2, 65537, 65539, 2, 65537, 65540, 2, 65537, 65541, 2, 65537, 65542, 2, 65537, 65543, 2, 65537, 65544, 2, 65537, 65545, 2, 65537, 65546, 2, 65537, 65547, 2, 65537, 65548, 2, 65537, 65549, 2, 65537, 65550, 2, 65537, 65551, 2, 65537, 65552, 2, 65537, 65553, 2, 65538, 131072, 2, 65536, 131073, 2, 65537, 131074, 2, 65537, 131075, 2, 65537, 131076, 2, 65537, 131077, 2, 65537, 131078, 2, 65537, 131079, 2, 65537, 131080, 2, 65537, 131081, 2, 65537, 131082, 2, 65537, 131083, 2, 65537, 131084, 2, 65537, 131085, 2, 65537, 131086, 2, 65537, 131087, 2, 65537, 131088, 2, 65537, 131089, 2, 65538, 196608, 2, 65536, 196609, 2, 65537, 196610, 2, 65537, 196611, 2, 65537, 196612, 2, 65537, 196613, 2, 65537, 196614, 2, 65537, 196615, 2, 65537, 196616, 2, 65537, 196617, 2, 65537, 196618, 2, 65537, 196619, 2, 65537, 196620, 2, 65537, 196621, 2, 65537, 196622, 2, 65537, 196623, 2, 65537, 196624, 2, 65537, 196625, 2, 65538, 262144, 2, 131072, 262145, 2, 131073, 262146, 2, 131073, 262147, 2, 131073, 262148, 2, 131073, 262149, 2, 131073, 262150, 2, 131073, 262151, 2, 131073, 262152, 2, 131073, 262153, 2, 131073, 262154, 2, 131073, 262155, 2, 131073, 262156, 2, 131073, 262157, 2, 131073, 262158, 2, 131073, 262159, 2, 131073, 262160, 2, 131073, 262161, 2, 131074 )

[node name="GroundBackground" type="TileMap" parent="Background"]
visible = false
z_index = -1
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1376258, 1, 4, 1376259, 1, 4, 1376262, 1, 4, 1376263, 1, 3, 1376266, 1, 65539, 1376267, 1, 65538, 1376270, 1, 1, 1376271, 1, 1, 1441794, 1, 65537, 1441795, 1, 65538, 1441798, 1, 2, 1441799, 1, 65538, 1441802, 1, 65536, 1441803, 1, 1, 1441806, 1, 65536, 1441807, 1, 65536 )

[node name="Ground" type="TileMap" parent="Background"]
visible = false
z_index = -1
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1441790, 0, 0, 1441791, 0, 1, 1376256, 0, 1, 1376257, 0, 2, 1376260, 0, 0, 1376261, 0, 2, 1376264, 0, 0, 1376265, 0, 2, 1376268, 0, 0, 1376269, 0, 2, 1376272, 0, 0, 1376273, 0, 1, 1376274, 0, 1, 1376275, 0, 2, 1507326, 0, 65536, 1507327, 0, 65537, 1441792, 0, 65537, 1441793, 0, 65538, 1441796, 0, 65536, 1441797, 0, 65538, 1441800, 0, 65536, 1441801, 0, 65538, 1441804, 0, 65536, 1441805, 0, 65538, 1441808, 0, 65536, 1441809, 0, 65537, 1441810, 0, 65537, 1441811, 0, 65538, 1572862, 0, 65536, 1572863, 0, 65537, 1507328, 0, 65537, 1507329, 0, 65539, 1507330, 0, 1, 1507331, 0, 1, 1507332, 0, 65540, 1507333, 0, 65539, 1507334, 0, 1, 1507335, 0, 1, 1507336, 0, 65540, 1507337, 0, 65539, 1507338, 0, 1, 1507339, 0, 1, 1507340, 0, 65540, 1507341, 0, 65539, 1507342, 0, 1, 1507343, 0, 1, 1507344, 0, 65540, 1507345, 0, 65537, 1507346, 0, 65537, 1507347, 0, 65538, 1638398, 0, 65536, 1638399, 0, 65537, 1572864, 0, 65537, 1572865, 0, 65537, 1572866, 0, 65537, 1572867, 0, 65537, 1572868, 0, 65537, 1572869, 0, 65537, 1572870, 0, 65537, 1572871, 0, 65537, 1572872, 0, 65537, 1572873, 0, 65537, 1572874, 0, 65537, 1572875, 0, 65537, 1572876, 0, 65537, 1572877, 0, 65537, 1572878, 0, 65537, 1572879, 0, 65537, 1572880, 0, 65537, 1572881, 0, 65537, 1572882, 0, 65537, 1572883, 0, 65538, 1703934, 0, 65536, 1703935, 0, 65537, 1638400, 0, 65537, 1638401, 0, 65537, 1638402, 0, 65537, 1638403, 0, 65537, 1638404, 0, 65537, 1638405, 0, 65537, 1638406, 0, 65537, 1638407, 0, 65537, 1638408, 0, 65537, 1638409, 0, 65537, 1638410, 0, 65537, 1638411, 0, 65537, 1638412, 0, 65537, 1638413, 0, 65537, 1638414, 0, 65537, 1638415, 0, 65537, 1638416, 0, 65537, 1638417, 0, 65537, 1638418, 0, 65537, 1638419, 0, 65538 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_left = 32.0
margin_right = -32.0
margin_bottom = 160.0
theme_type_variation = "TitleLabel"
text = "Math Defender"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="DifficultyLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -96.0
margin_right = 192.0
margin_bottom = -64.0
theme_type_variation = "HUD"
text = "DIFFICULTY"

[node name="DifficultySlider" type="HSlider" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -96.0
margin_right = 240.0
margin_bottom = -64.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="DifficultyValue" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -96.0
margin_right = -16.0
margin_bottom = -64.0
theme_type_variation = "HUD"
text = "1"
align = 2

[node name="SpeedLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -32.0
margin_right = 192.0
theme_type_variation = "HUD"
text = "SPEED"

[node name="SpeedSlider" type="HSlider" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -32.0
margin_right = 240.0
mouse_default_cursor_shape = 2
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="SpeedValue" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -32.0
margin_right = -16.0
theme_type_variation = "HUD"
text = "1"
align = 2

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 64.0
margin_right = 120.0
margin_bottom = 107.0
mouse_default_cursor_shape = 2
text = "PLAY"

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 128.0
margin_right = 120.0
margin_bottom = 171.0
mouse_default_cursor_shape = 2
text = "EXIT"

[node name="OptionsContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -74.0
margin_bottom = -24.0
custom_constants/separation = 8
alignment = 1

[node name="SoundButton" type="CheckButton" parent="OptionsContainer"]
unique_name_in_owner = true
margin_left = 205.0
margin_right = 255.0
margin_bottom = 50.0
hint_tooltip = "TOGGLE_SOUND"
mouse_default_cursor_shape = 2
custom_icons/off = ExtResource( 7 )
custom_icons/on = ExtResource( 6 )

[node name="MusicButton" type="CheckButton" parent="OptionsContainer"]
unique_name_in_owner = true
margin_left = 263.0
margin_right = 313.0
margin_bottom = 50.0
hint_tooltip = "TOGGLE_MUSIC"
mouse_default_cursor_shape = 2
custom_icons/off = ExtResource( 8 )
custom_icons/on = ExtResource( 9 )

[node name="FullscreenButton" type="CheckButton" parent="OptionsContainer"]
unique_name_in_owner = true
margin_left = 321.0
margin_right = 371.0
margin_bottom = 50.0
hint_tooltip = "TOGGLE_FULLSCREEN"
mouse_default_cursor_shape = 2
custom_icons/off = ExtResource( 10 )
custom_icons/on = ExtResource( 11 )

[connection signal="value_changed" from="DifficultySlider" to="." method="_on_DifficultySlider_value_changed"]
[connection signal="value_changed" from="SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="OptionsContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="OptionsContainer/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="OptionsContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
